@@ -2,8 +2,9 @@ package greencity.service;
 
 import greencity.client.RestClient;
 import greencity.constant.ErrorMessage;
-import greencity.dto.event.EventRequestDto;
+import greencity.dto.event.EventDetailsUpdate;
 import greencity.dto.event.EventResponseDto;
+import greencity.dto.event.EventVO;
 import greencity.entity.*;
 import greencity.enums.Role;
 import greencity.enums.TagType;
@@ -19,8 +20,9 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -40,36 +42,35 @@ public class EventServiceImpl implements EventService {
      */
     @Override
     @Transactional
-    public EventResponseDto update(Long eventId, EventRequestDto requestDto, String email, MultipartFile[] files) {
-        Event eventToUpdate = eventRepo.findById(eventId)
+    public EventResponseDto update(EventDetailsUpdate requestDto, String email, MultipartFile[] files) {
+        Event eventToUpdate = eventRepo.findById(requestDto.getId())
                 .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
         User organizer = modelMapper.map(restClient.findByEmail(email), User.class);
 
         if (!organizer.getId().equals(eventToUpdate.getOrganizer().getId())
-                && organizer.getRole() != Role.ROLE_ADMIN) {
+            && organizer.getRole() != Role.ROLE_ADMIN) {
             throw new UserHasNoPermissionToAccessException(ErrorMessage.USER_HAS_NO_PERMISSION);
         }
 
         updateEvent(requestDto, eventToUpdate);
-        var eventDaysToUpdate = requestDto.getEventDays()
-                .stream()
-                .map(dto -> modelMapper.map(dto, EventDay.class))
-                .map(eventDay -> eventDay.setEvent(eventToUpdate)).collect(Collectors.toList());
-        eventToUpdate.setEventDays(eventDaysToUpdate);
-//        updateEventDay(requestDto, eventToUpdate);
-        if (files != null) updateAdditionalImages(files, eventToUpdate);
+        updateEventDay(requestDto, eventToUpdate);
+        updateAdditionalImages(requestDto, files, eventToUpdate);
 
         Event saved = eventRepo.save(eventToUpdate);
         return modelMapper.map(saved, EventResponseDto.class);
     }
 
-    private void updateEvent(EventRequestDto requestDto, Event eventToUpdate) {
+    private void updateEvent(EventDetailsUpdate requestDto, Event eventToUpdate) {
         if (requestDto.getTitle() != null) {
             eventToUpdate.setTitle(requestDto.getTitle());
         }
 
         if (requestDto.getDescription() != null) {
             eventToUpdate.setDescription(requestDto.getDescription());
+        }
+
+        if (requestDto.getImage() == null || requestDto.getImage().isEmpty()) {
+            fileService.delete(eventToUpdate.getImage());
         }
 
         if (requestDto.getTags() != null) {
@@ -79,40 +80,62 @@ public class EventServiceImpl implements EventService {
         }
     }
 
-//    private void updateEventDay(EventRequestDto requestDto, Event eventToUpdate) {
-//        if (requestDto.getEventDays() != null) {
-//            List<EventDay> daysToUpdate = requestDto.getEventDays().stream()
-//                    .map(eventDayDto -> {
-//                        EventDay eventDay = modelMapper.map(eventDayDto, EventDay.class);
-//                        eventDay.setEvent(eventToUpdate);
-//                        return eventDay;
-//                    })
-//                    .collect(Collectors.toList());
-//
-//            List<EventDay> toRemove = eventToUpdate.getEventDays().stream()
-//                    .filter(day -> daysToUpdate.stream()
-//                            .noneMatch(newDay -> newDay.getId().equals(day.getId())))
-//                    .toList();
-//            toRemove.forEach(day -> eventRepo.deleteEventDayByEventId(day.getId()));
-//
-//            eventToUpdate.setEventDays(daysToUpdate);
-//        }
-//    }
+    private void updateEventDay(EventDetailsUpdate requestDto, Event eventToUpdate) {
+        if (requestDto.getEventDays() != null) {
+            List<EventDay> daysToUpdate = requestDto.getEventDays().stream()
+                    .map(eventDayDto -> {
+                        EventDay eventDay = modelMapper.map(eventDayDto, EventDay.class);
+                        eventDay.setEvent(eventToUpdate);
+                        return eventDay;
+                    })
+                    .collect(Collectors.toList());
 
-    private void updateAdditionalImages(MultipartFile[] files, Event eventToUpdate) {
-        String existingImage = eventToUpdate.getImage();
-        String requestImage = fileService.upload(files[0]);
-        if (existingImage != null && !requestImage.equals(existingImage)) {
-            fileService.delete(existingImage);
-            eventToUpdate.setImage(requestImage);
+            List<EventDay> toRemove = eventToUpdate.getEventDays().stream()
+                    .filter(day -> daysToUpdate.stream()
+                            .noneMatch(newDay -> newDay.getId().equals(day.getId())))
+                    .toList();
+            toRemove.forEach(day -> eventRepo.deleteEventDayByEventId(day.getId()));
+
+            eventToUpdate.setEventDays(daysToUpdate);
         }
-        List<String> requestImageLinks = Arrays.stream(files).map(fileService::upload).toList();
-        List<String> existingImageLinks = eventToUpdate.getAdditionalImages().stream().map(EventImages::getLink).toList();
-        List<String> imagesToDeleteFromAzure = existingImageLinks.stream()
-                .filter(image -> !requestImageLinks.contains(image)).toList();
-        imagesToDeleteFromAzure.forEach(fileService::delete);
-        eventToUpdate.setAdditionalImages(requestImageLinks.stream()
-                .map(link -> EventImages.builder().event(eventToUpdate).link(link).build()).toList());
+    }
+
+    private void updateAdditionalImages(EventDetailsUpdate requestDto, MultipartFile[] files, Event eventToUpdate) {
+        Set<String> requestLinks = new HashSet<>(requestDto.getAdditionalImages());
+        List<EventImages> imagesFromDb = eventToUpdate.getAdditionalImages();
+
+        List<EventImages> imagesToDelete = imagesFromDb.stream()
+                .filter(image -> !requestLinks.contains(image.getLink()))
+                .collect(Collectors.toList());
+        imagesToDelete.forEach(image -> fileService.delete(image.getLink()));
+
+        if (!imagesToDelete.isEmpty()) {
+            eventImagesRepo.deleteAll(imagesToDelete);
+        }
+
+        List<EventImages> imagesToKeep = imagesFromDb.stream()
+                .filter(image -> requestLinks.contains(image.getLink()))
+                .collect(Collectors.toList());
+
+        eventToUpdate.setAdditionalImages(imagesToKeep);
+        uploadFilesAndCreatingLinks(requestDto, files, eventToUpdate);
+    }
+
+    private void uploadFilesAndCreatingLinks(EventDetailsUpdate requestDto, MultipartFile[] files, Event eventToUpdate) {
+        if (files != null) {
+            for (MultipartFile file : files) {
+                String link = fileService.upload(file);
+
+                if (requestDto.getImage() == null) {
+                    eventToUpdate.setImage(link);
+                } else {
+                    eventToUpdate.getAdditionalImages().add(EventImages.builder()
+                            .link(link)
+                            .event(eventToUpdate)
+                            .build());
+                }
+            }
+        }
     }
 
     @Override
@@ -129,6 +152,12 @@ public class EventServiceImpl implements EventService {
 
 //        notificationSrvice.notifyAttendees(event.getAttendants(), "The event has been deleted");
         eventRepo.delete(event);
+    }
+
+    @Override
+    public EventVO findById(long eventId) {
+        return modelMapper.map(eventRepo.findById(eventId).orElseThrow(
+                () -> new NotFoundException("Event not found by this id")), EventVO.class);
     }
 
     @Override
@@ -159,7 +188,7 @@ public class EventServiceImpl implements EventService {
 
     private boolean isAdmin(Long userId) {
         return userRepo.findById(userId)
-                .map(User::getRole)
-                .orElse(Role.ROLE_USER) == Role.ROLE_ADMIN;
+                       .map(User::getRole)
+                       .orElse(Role.ROLE_USER) == Role.ROLE_ADMIN;
     }
 }
